--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Noel</title>
+    <link rel="stylesheet" href="tuyet1.css">
 </head>
 
+
 <body>
-    <h1>hello world</h1>
+    <div id="container">
+        <h1>Minh Hiếu</h1>
+        <div class="snow"></div>
+    </div>
+
+
+
+    <script src="tuyet1.js"></script>
 </body>
 
 </html>
